tests/snapshots/compile_snapshots__named-port.cedar.snap
---
source: tests/compile_snapshots.rs
expression: fixture.source
---
// Generated by np2cedar from 2 NetworkPolicy object(s). Do not edit by hand.
//
// A connection source -> destination is allowed if and only if BOTH decisions
// are Allow, because Kubernetes requires the sending and receiving ends to agree:
//
//   is_authorized(Action::"egress",  source, destination, context)
//   is_authorized(Action::"ingress", source, destination, context)

// Pods selected by no Ingress-type NetworkPolicy are not isolated for ingress.
@k8sKind("catch-all")
@k8sDirection("ingress")
permit (principal, action == Action::"ingress", resource)
unless {
  resource is Pod &&
  // default/named-ingress
  (
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "api"
  )
};

// Pods selected by no Egress-type NetworkPolicy are not isolated for egress.
@k8sKind("catch-all")
@k8sDirection("egress")
permit (principal, action == Action::"egress", resource)
unless {
  principal is Pod &&
  // default/named-egress
  (
    principal.namespace == Namespace::"default" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "client"
  )
};

@k8sPolicy("default/named-egress")
@k8sDirection("egress")
@k8sRule("0")
permit (
  principal is Pod,
  action == Action::"egress",
  resource
)
when {
  // spec.podSelector, in the policy's namespace default
  (
    principal.namespace == Namespace::"default" &&
    principal.labels.hasTag("app") &&
    principal.labels.getTag("app") == "client"
  ) &&
  // egress[0].ports (any of)
  (
    context.protocol == Protocol::"TCP" &&
    resource is Pod &&
    resource.namedPorts.hasTag("metrics") &&
    context.port == resource.namedPorts.getTag("metrics")
  )
};

@k8sPolicy("default/named-ingress")
@k8sDirection("ingress")
@k8sRule("0")
permit (
  principal,
  action == Action::"ingress",
  resource is Pod
)
when {
  // spec.podSelector, in the policy's namespace default
  (
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "api"
  ) &&
  // ingress[0].ports (any of)
  (
    context.protocol == Protocol::"TCP" &&
    resource is Pod &&
    resource.namedPorts.hasTag("metrics") &&
    context.port == resource.namedPorts.getTag("metrics")
  )
};
