tests/snapshots/compile_snapshots__namespace-selector.cedar.snap
---
source: tests/compile_snapshots.rs
expression: fixture.source
---
// Generated by np2cedar from 2 NetworkPolicy object(s). Do not edit by hand.
//
// A connection source -> destination is allowed if and only if BOTH decisions
// are Allow, because Kubernetes requires the sending and receiving ends to agree:
//
//   is_authorized(Action::"egress",  source, destination, context)
//   is_authorized(Action::"ingress", source, destination, context)

// Pods selected by no Ingress-type NetworkPolicy are not isolated for ingress.
@k8sKind("catch-all")
@k8sDirection("ingress")
permit (principal, action == Action::"ingress", resource)
unless {
  resource is Pod &&
  (
    // prod/allow-from-monitoring
    (
      resource.namespace == Namespace::"prod" &&
      resource.labels.hasTag("app") &&
      resource.labels.getTag("app") == "db"
    ) ||
    // stage/allow-from-anywhere
    (
      resource.namespace == Namespace::"stage" &&
      resource.labels.hasTag("app") &&
      resource.labels.getTag("app") == "db"
    )
  )
};

// Pods selected by no Egress-type NetworkPolicy are not isolated for egress.
@k8sKind("catch-all")
@k8sDirection("egress")
permit (principal, action == Action::"egress", resource);

@k8sPolicy("prod/allow-from-monitoring")
@k8sDirection("ingress")
@k8sRule("0")
permit (
  principal,
  action == Action::"ingress",
  resource is Pod
)
when {
  // spec.podSelector, in the policy's namespace prod
  (
    resource.namespace == Namespace::"prod" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "db"
  ) &&
  // ingress[0].from (any of)
  (
    (
      principal is Pod &&
      principal.namespace.labels.hasTag("kubernetes.io/metadata.name") &&
      principal.namespace.labels.getTag("kubernetes.io/metadata.name") == "monitoring"
    ) ||
    (
      principal is Pod &&
      principal.namespace.labels.hasTag("team") &&
      principal.namespace.labels.getTag("team") == "platform" &&
      principal.labels.hasTag("app") &&
      principal.labels.getTag("app") == "scraper"
    )
  )
};

@k8sPolicy("stage/allow-from-anywhere")
@k8sDirection("ingress")
@k8sRule("0")
permit (
  principal,
  action == Action::"ingress",
  resource is Pod
)
when {
  // spec.podSelector, in the policy's namespace stage
  (
    resource.namespace == Namespace::"stage" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "db"
  ) &&
  // ingress[0].from (any of)
  principal is Pod
};
