tests/snapshots/compile_snapshots__protocol-enum.cedar.snap
---
source: tests/compile_snapshots.rs
expression: fixture.source
---
// Generated by np2cedar from 1 NetworkPolicy object(s). Do not edit by hand.
//
// A connection source -> destination is allowed if and only if BOTH decisions
// are Allow, because Kubernetes requires the sending and receiving ends to agree:
//
//   is_authorized(Action::"egress",  source, destination, context)
//   is_authorized(Action::"ingress", source, destination, context)

// Pods selected by no Ingress-type NetworkPolicy are not isolated for ingress.
@k8sKind("catch-all")
@k8sDirection("ingress")
permit (principal, action == Action::"ingress", resource)
unless {
  resource is Pod &&
  // default/udp-only
  (
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "dns"
  )
};

// Pods selected by no Egress-type NetworkPolicy are not isolated for egress.
@k8sKind("catch-all")
@k8sDirection("egress")
permit (principal, action == Action::"egress", resource);

@k8sPolicy("default/udp-only")
@k8sDirection("ingress")
@k8sRule("0")
permit (
  principal,
  action == Action::"ingress",
  resource is Pod
)
when {
  // spec.podSelector, in the policy's namespace default
  (
    resource.namespace == Namespace::"default" &&
    resource.labels.hasTag("app") &&
    resource.labels.getTag("app") == "dns"
  ) &&
  // ingress[0].ports (any of)
  (
    context.protocol == Protocol::"UDP" &&
    context.port == 53
  )
};
